# slimy-mist

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
.cargo/: config.toml
.github/workflows/: ci.yaml  release.yaml
assets/android-res/drawable/: ic_launcher_foreground.xml
assets/android-res/mipmap-anydpi-v26/: ic_launcher.xml
assets/data/characters/human/: male.animation.ron  male.collision.ron  male.layermap.ron
assets/data/characters/npc/: slime.animation.ron  slime.assets.ron  slime.collision.ron  slime.layermap.ron  slime.layers.ron
assets/data/characters/player/: male.animation.ron  male.assets.ron  male.layers.ron
assets/data/levels/: overworld.assets.ron  overworld.tiles.ron
assets/data/menus/: credits.ron
assets/data/particles/: combat-hit.particle.ron  dust-walking.particle.ron  walking-dust.particle.ron
assets/shaders/particles/: death.wgsl  dust_trail.wgsl  melee.wgsl
graphics/: player.pxo  slime.pxo
graphics/aseprite-scripts/: export_layers.lua  image_border.lua
graphics/aseprite-scripts/gaspi/: export_combinations.lua  export_layers.lua  export_slices.lua  main.lua
graphics/characters/: human-male.aseprite  human-male.pxo  male.pxo  player.pxo  slime.aseprite  slime.pxo
graphics/levels/: overworld.aseprite  overworld.pxo
graphics/palettes/: otterisk-96.gpl  uncured-official.gpl
mobile/android/: build.gradle.kts  gradle.properties  settings.gradle.kts
mobile/android/app/: CMakeLists.txt  build.gradle.kts
mobile/android/app/src/main/: AndroidManifest.xml
mobile/android/app/src/main/cpp/: dummy.cpp
mobile/android/app/src/main/java/dev/meinel/leo/bevy_slime_dodge/: MainActivity.java
mobile/android/app/src/main/kotlin/dev/meinel/slimymist/: MainActivity.kt
mobile/android/gradle/: libs.versions.toml
mobile/android/res/drawable/: ic_launcher_foreground.xml
mobile/ios/: Makefile  build_rust_deps.sh
mobile/ios/ios-src/: Info.plist
mobile/ios/slimymist.xcodeproj/: project.pbxproj
mobile/ios/slimymist.xcodeproj/xcshareddata/xcschemes/: slimymist.xcscheme
scripts/: build.sh  collider.sh  drawable.sh  keytool-android.sh  run.sh  svg2webp.sh
src/: android.rs  animations.rs  asset_tracking.rs  audio.rs  camera.rs  characters.rs  dev_tools.rs  input.rs  levels.rs  lib.rs  light.rs  lighting.rs  logging.rs  main.rs  menus.rs  mobile.rs  particles.rs  procgen.rs  render.rs  screens.rs  theme.rs  ui.rs  utils.rs  visual.rs  visuals.rs
src/animations/: npc.rs  player.rs
src/camera/: lighting.rs  ysort.rs
src/characters/: animation.rs  animations.rs  attack.rs  combat.rs  health.rs  nav.rs  npc.rs  player.rs  spawn.rs
src/characters/animation/: npc.rs  player.rs
src/characters/animations/: npc.rs  player.rs
src/input/: actions.rs  joystick.rs  mock.rs  pointer.rs  ui.rs
src/levels/: arena.rs  chunks.rs  overworld.rs
src/logging/: error.rs  warn.rs
src/menus/: credits.rs  main.rs  pause.rs  settings.rs
src/mobile/: android.rs
src/procgen/: characters.rs  chunks.rs  level.rs  lighting.rs  lights.rs  mist.rs  nav_grid.rs  navigation.rs  navmesh.rs  spawn.rs
src/render/: light.rs  materials.rs  mist.rs  z_levels.rs
src/screens/: gameplay.rs  loading.rs  splash.rs  title.rs
src/theme/: interaction.rs  palette.rs
src/theme/widgets/: common.rs
src/ui/: directional_nav.rs  interaction.rs  nav.rs  palette.rs  scroll.rs  widgets.rs
src/utils/: math.rs  rng.rs  run_conditions.rs
src/visual/: layers.rs  particles.rs
src/worlds/: overworld.rs
web/: index.html  restart-audio-context.js
