[package]
name = "bevy-slime-dodge"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.17.3", features = ["wayland", "webp", "x11"] }
# Restrict logging
log = { version = "*", features = [
 "max_level_debug",
 "release_max_level_warn",
] }

# Profile optimizations
[profile.dev]
opt-level = 1
[profile.dev.package."*"]
opt-level = 3

[profile.wasm-dev]
inherits = "dev"
opt-level = 1
[profile.wasm-dev.package."*"]
opt-level = "s"

[profile.release]
codegen-units = 1
lto = "thin"
strip = "symbols"

[profile.wasm-release]
inherits = "release"
opt-level = "s"
