# Heavily inspired by: https://github.com/TheBevyFlock/bevy_new_2d

[package]
name = "slimy_mist"
# NOTE: Update with full semantic version on each release
version = "0.11.15"
edition = "2024"
license = "Apache-2.0"

# NOTE: lib.rs is required for mobile
[lib]
name = "slimy_mist"
crate-type = ["lib", "cdylib"]
path = "src/lib.rs"

[[bin]]
name = "slimymist"
path = "src/main.rs"
doc = false

[dependencies]
bevy = "0.17.3"
bevy_asset_loader = { version = "0.24.0", features = [
 "2d",
 "standard_dynamic_assets",
 "progress_tracking",
] }
bevy_common_assets = { version = "0.14.0", features = ["ron"] }
bevy_ecs_tilemap = "0.17.0"
# FIXME: Temporary workaround to circumvent failing wasm builds.
#        Wait for https://github.com/Lommix/bevy_enoki/pull/35 to be merged.
#        Also see: https://github.com/Lommix/bevy_enoki/issues/34
bevy_enhanced_input = "0.20.1"
bevy_enoki = { git = "https://github.com/leomeinel/bevy_enoki.git", branch = "update-dependencies" }
bevy_light_2d = "0.8.0"
bevy_prng = { version = "0.12.1", features = ["rand_chacha", "wyrand"] }
bevy_rand = "0.12.1"
bevy_rapier2d = "0.32.0"
bevy_spritesheet_animation = "5.0.0"
iyes_progress = "0.15.0"
ordered-float = "5.1.0"
polyanya = "0.15.1"
rand = "0.9.2"
serde = "1.0.228"
# Compile out low-severity logs to improve performance.
# Remove these features if you want to profile your game with tracy.
# (see <https://github.com/bevyengine/bevy/blob/main/docs/profiling.md#tracy-profiler>)
tracing = { version = "0.1.44", features = [
 "max_level_debug",
 "release_max_level_warn",
] }
vleue_navigator = "0.14.0"

[dev-dependencies]
bevy_rapier2d = { version = "0.32.0", features = ["debug-render-2d"] }

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
virtual_joystick = { git = "https://github.com/leomeinel/virtual_joystick.git", branch = "refactor-and-fix-39" }

[target.'cfg(all(target_family = "wasm", any(target_os = "unknown", target_os = "none")))'.dependencies]
bevy_rand = { version = "0.12.1", features = ["wasm_js"] }

[target.'cfg(not(target_os = "linux"))'.dependencies]
bevy = { version = "0.17.3", features = ["webp"] }
[target.'cfg(target_os = "linux")'.dependencies]
bevy = { version = "0.17.3", features = ["wayland", "webp", "x11"] }

# FIXME: android-activity 0.6.0 is only compatible with major version 2 of games-activity which is no at 4.0.0.
#        This is why we are using a fix from: https://mevlyshkin.com/notes/bevy-android-input/
#        Also see:
#        - https://github.com/rust-mobile/android-activity/discussions/208
#        - https://github.com/rust-mobile/android-activity/issues/210
#        - https://github.com/bevyengine/bevy/issues/10945
[patch.crates-io]
android-activity = { git = "https://github.com/damus-io/android-activity", rev = "a8948332c7c551303d32eb26a59d0abd676e47a5" }

[features]
# Default to a native dev build.
default = ["dev_native"]
dev = [
 # Improve compile times for dev builds by linking Bevy as a dynamic library.
 "bevy/dynamic_linking",
 "bevy/bevy_dev_tools",
 "bevy/bevy_ui_debug",
 # Improve error messages coming from Bevy
 "bevy/track_location",
]
dev_native = [
 "dev",
 # Enable asset hot reloading for native dev builds.
 "bevy/file_watcher",
 # Enable embedded asset hot reloading for native dev builds.
 "bevy/embedded_watcher",
]

[package.metadata.bevy_cli.release]
# Disable dev features for release builds.
default-features = false

[package.metadata.bevy_cli.web]
# Disable native features for web builds.
default-features = false

[package.metadata.bevy_cli.web.dev]
features = ["dev"]

[lints.rust]
# Mark `bevy_lint` as a valid `cfg`, as it is set when the Bevy linter runs.
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(bevy_lint)"] }

[lints.clippy]
# Bevy supplies arguments to systems via dependency injection, so it's natural for systems to
# request more than 7 arguments, which would undesirably trigger this lint.
too_many_arguments = "allow"
# Queries may access many components, which would undesirably trigger this lint.
type_complexity = "allow"
# Make sure macros use their standard braces, such as `[]` for `bevy_ecs::children!`.
nonstandard_macro_braces = "warn"

# You can configure the warning levels of Bevy lints here. For a list of all lints, see:
# <https://thebevyflock.github.io/bevy_cli/bevy_lint/lints/>
[package.metadata.bevy_lint]
# panicking_methods = "deny"
# pedantic = "warn"

# Compile with Performance Optimizations:
# <https://bevyengine.org/learn/quick-start/getting-started/setup/#compile-with-performance-optimizations>

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1
# FIXME: Remove workaround for https://github.com/rust-lang/rust/issues/81280 after it has been fixed
incremental = false

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Remove expensive debug assertions due to <https://github.com/bevyengine/bevy/issues/14291>
[profile.dev.package.wgpu-types]
debug-assertions = false

[profile.web-dev]
inherits = "dev"

[profile.web-dev.package."*"]
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"

[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"
strip = "symbols"

# This profile will be used by `bevy run web` automatically.
[profile.web-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"

# Optimize for build time in CI.
[profile.ci]
inherits = "dev"
opt-level = 0
debug = "line-tables-only"
codegen-units = 4

[profile.ci.package."*"]
opt-level = 0
